<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:id="@+id/secondView"
    tools:context=".DetailActivity" >

    <TextView
        android:id="@+id/titleText"
        android:padding="10dp"
        android:maxLines = "8"
        android:scrollbars = "vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_line_one" />
	<TextView
        android:id="@+id/detailText"
        android:padding="10dp"
        android:maxLines = "8"
        android:scrollbars = "vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_line_two" />
	<TextView
        android:id="@+id/urlText"
        android:padding="10dp"
        android:maxLines = "8"
        android:scrollbars = "vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_line_three" />
	
	<LinearLayout 
	    android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:paddingBottom="@dimen/activity_vertical_margin"
    	android:paddingLeft="@dimen/activity_horizontal_margin"
    	android:paddingRight="@dimen/activity_horizontal_margin"
    	android:paddingTop="@dimen/activity_vertical_margin"
    	android:orientation="horizontal" >
	<ImageView 
	    android:id="@+id/posterImage"
	    android:contentDescription="@string/description"
	    android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
	<Button 
	    android:id="@+id/openWebView"
	    android:text="@string/openwebview"
	    android:padding="10dp"
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
	    
	    
	</LinearLayout>
	
</LinearLayout>
